<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:scrollbarAlwaysDrawHorizontalTrack="false" android:scrollbarAlwaysDrawVerticalTrack="false" android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:background="@color/help_bg" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:id="@id/LinearLayout01" android:paddingLeft="7.0dip" android:paddingRight="7.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/logo" />
            <TextView android:textStyle="bold" android:textColor="@color/help_title_text" android:gravity="center" android:background="@drawable/back_title" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/widget_add_title" />
            <TextView android:textColor="@color/help_text_color" android:background="@drawable/list_bg_top" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/widget_add_1" />
            <TextView android:textColor="@color/help_text_color" android:background="@color/help_title_bg" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/widget_add_2" />
            <TextView android:textColor="@color/help_text_color" android:background="@color/help_title_bg" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/widget_add_3" />
            <TextView android:textColor="@color/help_text_color" android:background="@drawable/list_bg_bottom" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/widget_add_4" />
        </LinearLayout>
        <View android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0" />
        <Gallery android:id="@id/gallery" android:background="#ff86a0ff" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:fadingEdge="none" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:spacing="10.0dip" />
        <TextView android:textColor="@color/help_text_color" android:textColorHighlight="@color/link_highlight" android:textColorLink="#ff86a0ff" android:id="@id/tvLinks" android:background="@drawable/footer_bg" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="7.0dip" android:layout_marginRight="7.0dip" android:layout_marginBottom="7.0dip" android:text="@string/widget_add_url" />
        <TextView android:textSize="12.0sp" android:textStyle="bold" android:textColor="#ff000000" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginBottom="5.0dip" android:text="@string/copyright" />
    </LinearLayout>
</ScrollView>