<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:layout_gravity="left|center" android:orientation="vertical" android:id="@id/llSelect" android:background="@drawable/back" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textStyle="bold" android:textColor="#ffffffff" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/select_brightness" android:layout_weight="1.0" />
        <TextView android:textStyle="bold" android:textColor="#ffffffff" android:gravity="right" android:id="@id/tvCurrentValue" android:padding="10.0dip" android:layout_width="60.0dip" android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:layout_gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:textStyle="bold" android:id="@id/btn1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="0%" android:layout_weight="1.0" />
        <Button android:textStyle="bold" android:id="@id/btn2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="25%" android:layout_weight="1.0" />
        <Button android:textStyle="bold" android:id="@id/btn3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="50%" android:layout_weight="1.0" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:layout_gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:textStyle="bold" android:id="@id/btn4" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="75%" android:layout_weight="1.0" />
        <Button android:textStyle="bold" android:id="@id/btn5" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="100%" android:layout_weight="1.0" />
    </LinearLayout>
    <Button android:textStyle="bold" android:id="@id/btnAuto" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/brightness_auto" android:layout_weight="1.0" />
    <SeekBar android:layout_gravity="center" android:id="@id/sbBrightness" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" />
    <CheckBox android:textSize="13.0sp" android:textStyle="bold" android:textColor="#ffc0c0c0" android:gravity="center_vertical" android:id="@id/cbCloseOnSelect" android:paddingLeft="28.0dip" android:layout_width="wrap_content" android:layout_height="28.0dip" android:button="@drawable/checkbox" android:text="@string/close_on_select" android:layout_weight="1.0" />
</LinearLayout>